GH-67 added overflow hidden on button to fix IE11 issue

--- a/src/_components/buttoncta/_buttoncta.scss
+++ b/src/_components/buttoncta/_buttoncta.scss
@@ -15,6 +15,7 @@ a.c-buttoncta {
 	display: inline-flex;
 	text-decoration: none;
 	margin: 0 10px 20px 0;
+	overflow: hidden;
 
 	&:hover {
 		text-decoration: none;
